--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hello_remote_world"
+name = "rust_with_containers"
 version = "0.1.0"
-authors = ["VS Code <vscode@microsoft.com>"]
+authors = ["jpshrader"]
 
 [lib]
 path ="./src/lib/lib.rs"
