--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "rust_with_containers"
 version = "0.1.0"
 authors = ["jpshrader"]
+edition = "2018"
 
 [lib]
 path ="./src/lib/lib.rs"
+
+[dependencies]
+serde = { version = "1.0.144", features = ["derive"] }
+serde_json = "1.0.85"
+reqwest = "0.11.6"
